# cSerial

./: CMakeLists.txt  Makefile  main.c  readme.md  serial.c  serial.h
example/cmake/: CMakeLists.txt
example/make/: Makefile  main.c
